# sandbox

./: .gitignore  CLAUDE.md  CONTRIBUTING.adoc  Cargo.toml  LICENSE  Makefile  README.adoc  RELEASE_CHECKLIST.md  clippy.toml  cspell.json  rust-toolchain.toml
.cargo/: config.toml
packaging/: NOTES.adoc  after-install  common-fpm-options
src/: lib.rs  logger.rs  main.rs
tests/: README.md  ai_cli_flags.rs  ai_test_accept.rs  ai_test_bind_mount_validation.rs  ai_test_bind_mounts.rs  ai_test_builtin_ignore_patterns.rs  ai_test_can_mkdir_coverage.rs  ai_test_config_impls.rs  ai_test_config_option.rs  ai_test_corrupted_settings.rs  ai_test_delete.rs  ai_test_diff_coverage.rs  ai_test_gitignore_anchored_pattern.rs  ai_test_ignore_rules.rs  ai_test_ignore_rules_coverage.rs  ai_test_ignore_rules_overlay.rs  ai_test_run_media_mount.rs  ai_test_sandbox_settings.rs  isolated_test_accept_rename_across_mount.rs  isolated_test_accept_root.rs  isolated_test_create_old_root_host_path_failure.rs  isolated_test_new.rs  isolated_test_new_last.rs  isolated_test_pivot_root_failure.rs  isolated_test_special_files.rs  isolated_test_special_files_remove.rs  isolated_test_stop_all.rs  isolated_test_stop_all_partial_fail.rs  isolated_test_stop_pattern.rs  isolated_test_stop_stops_children.rs  isolated_test_sync.rs  isolated_test_twisted.rs  test_accept.rs  test_accept_deep_reshuffle.rs  test_bind_and_mask.rs  test_cli.rs  test_diff.rs  test_discard.rs  test_fuse.rs  test_ignore_rules.rs  (+11 more)
vm-testing/: .gitignore  01-setup-host-for-vm-testing.sh  20-prepare-vm-images.sh  99-cleanup.sh  (+9 more)
(+55 files in other folders)
