[package]
name    = "sandbox"
version = "0.3.0-dev"
edition = "2024"
include = ["src/**", "Cargo.toml", "clippy.toml", "*.lock", "tests/**", "Makefile"]

[lints.rust]

[features]
coverage = []


[dependencies]
log           = "=0.4.27"
libc          = "=0.2.172"
clap          = { version = "=4.5.37", features = ["derive", "string", "env", "wrap_help"] }
clap_complete = { version = "=4.5.48", features = ["unstable-dynamic"] }
uuid          = { version = "=1.16.0", features = ["v4"] }
nix           = { version = "=0.29.0", features = ["fs", "hostname", "mount", "signal", "user"] }
walkdir       = "=2.5.0"
data-encoding = "=2.9.0"
anyhow        = { version = "=1.0.98", features = ["backtrace"] }
colored       = "=3.0.0"
fast-glob     = "=0.4.5"
toml          = "=0.8.20"
serde         = { version = "=1.0.219", features = ["derive"] }
serde_json    = "=1.0.140"
chrono        = "=0.4.38"

[dev-dependencies]
rand   = "=0.9.1"
rstest = "=0.25.0"

[profile.dev]
debug = true

[profile.test]
debug = true

[profile.coverage]
inherits  = "test"
debug     = true
opt-level = 0
lto       = false

[profile.release]
opt-level = 3

[profile.profiler]
inherits = "release"
debug    = true
